# enron_app

./: .gitignore  LICENSE  README.md  project_data.md  pyproject.toml  run_indexer.py  run_search.py  thought_process.md
src/indexing/: create_index.py  email_parser.py  file_finder.py  index_io.py  text_processor.py
src/search/: content_reader.py  prefix_finder.py  search_term.py
